// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Snapshot: Comment Preservation > should preserve comments in .gitignore 1`] = `
"# Generacy Configuration Files
# This file is added to your .gitignore by Generacy's onboarding PR

# Environment file containing secrets (API keys, tokens)
generacy.env

# Agent state directory (runtime data, conversation history)
.agent-state/
"
`;

exports[`Snapshot: Comment Preservation > should preserve explanatory comments in env template 1`] = `
"# .generacy/generacy.env.template
#
# This is a TEMPLATE file. Copy it to \`generacy.env\` and fill in your actual values.
# The \`generacy.env\` file contains secrets and is automatically ignored by git.
#
# DO NOT commit \`generacy.env\` to version control!
# DO NOT share \`generacy.env\` in public channels!
#
# Generated: 2026-02-24T15:30:00.000Z
# Generated by: generacy-cli

# ============================================================================
# GitHub Integration
# ============================================================================

# GitHub Personal Access Token (PAT) with repo permissions
# Required for: Creating PRs, reading repositories, managing issues
# Get one at: https://github.com/settings/tokens/new
# Minimum scopes: repo, workflow (for Actions integration)
#
# SECURITY: Store securely, never commit to git, rotate regularly
GITHUB_TOKEN=

# ============================================================================
# AI Agent Configuration
# ============================================================================

# Anthropic API key for Claude Code agent
# Required for: Running AI-powered development tasks
# Get one at: https://console.anthropic.com/settings/keys
#
# SECURITY: Store securely, never commit to git
ANTHROPIC_API_KEY=

# ============================================================================
# Project Configuration
# ============================================================================

# Your Generacy project ID (auto-populated from config.yaml)
# This links your local environment to your Generacy cloud project
PROJECT_ID=proj_abc123xyz

# ============================================================================
# Local Development Configuration
# ============================================================================

# Redis URL for task queue (multi-repo orchestration)
# Default points to local Redis instance in dev container
# Override for custom Redis setup or external Redis instance
REDIS_URL=redis://redis:6379

# Logging level for Generacy agent output
# Options: debug, info, warn, error
# Default: info (recommended for development)
LOG_LEVEL=info

# ============================================================================
# Optional: Advanced Configuration
# ============================================================================

# Uncomment and configure these if you need custom behavior:

# Base branch for pull requests (overrides config.yaml default)
# BASE_BRANCH=main

# API endpoint for Generacy cloud service (for self-hosted deployments)
# GENERACY_API_URL=https://api.generacy.ai

# Custom agent configuration (overrides config.yaml default)
# AGENT=claude-code

# GitHub API base URL (for GitHub Enterprise)
# GITHUB_API_URL=https://api.github.com
"
`;

exports[`Snapshot: Comment Preservation > should preserve header comments in config.yaml 1`] = `
"# .generacy/config.yaml
# Generated: 2026-02-24T15:30:00.000Z
# Schema version: 1.0.0
# Generated by: generacy-cli
#
# This file defines your Generacy project configuration.
# Learn more: https://docs.generacy.ai/config

# ============================================================================
# Project Metadata
# ============================================================================

project:
  # Unique project identifier
  id: "proj_abc123xyz"

  # Human-readable project name
  name: "E-Commerce API"

# ============================================================================
# Repository Configuration
# ============================================================================

repos:
  # Primary repository (receives onboarding PR)
  primary: "github.com/acme-corp/ecommerce-api"

# ============================================================================
# Default Settings
# ============================================================================

defaults:
  # Default AI agent to use for tasks
  agent: "claude-code"

  # Default base branch for pull requests
  baseBranch: "main"

# ============================================================================
# Cluster Configuration
# ============================================================================

cluster:
  # Cluster variant determines the Docker topology for the dev container
  # - standard: Docker-outside-of-Docker (DooD) — for apps that don't run containers
  # - microservices: Docker-in-Docker (DinD) — each worker can run isolated container stacks
  variant: "standard"
"
`;

exports[`Snapshot: Complete File Sets > should match snapshot for all multi-repo file paths 1`] = `
[
  ".devcontainer/.env.template",
  ".devcontainer/Dockerfile",
  ".devcontainer/devcontainer.json",
  ".devcontainer/docker-compose.yml",
  ".devcontainer/scripts/entrypoint-orchestrator.sh",
  ".devcontainer/scripts/entrypoint-worker.sh",
  ".devcontainer/scripts/setup-credentials.sh",
  ".generacy/.gitignore",
  ".generacy/config.yaml",
  ".generacy/generacy.env.template",
  ".vscode/extensions.json",
]
`;

exports[`Snapshot: Complete File Sets > should match snapshot for all single-repo file paths 1`] = `
[
  ".devcontainer/.env.template",
  ".devcontainer/Dockerfile",
  ".devcontainer/devcontainer.json",
  ".devcontainer/docker-compose.yml",
  ".devcontainer/scripts/entrypoint-orchestrator.sh",
  ".devcontainer/scripts/entrypoint-worker.sh",
  ".devcontainer/scripts/setup-credentials.sh",
  ".generacy/.gitignore",
  ".generacy/config.yaml",
  ".generacy/generacy.env.template",
  ".vscode/extensions.json",
]
`;

exports[`Snapshot: Edge Cases > should match snapshot for config.yaml with no dev or clone repos 1`] = `
"# .generacy/config.yaml
# Generated: 2026-02-24T15:30:00.000Z
# Schema version: 1.0.0
# Generated by: generacy-cli
#
# This file defines your Generacy project configuration.
# Learn more: https://docs.generacy.ai/config

# ============================================================================
# Project Metadata
# ============================================================================

project:
  # Unique project identifier
  id: "proj_abc123xyz"

  # Human-readable project name
  name: "E-Commerce API"

# ============================================================================
# Repository Configuration
# ============================================================================

repos:
  # Primary repository (receives onboarding PR)
  primary: "github.com/acme-corp/ecommerce-api"

# ============================================================================
# Default Settings
# ============================================================================

defaults:
  # Default AI agent to use for tasks
  agent: "claude-code"

  # Default base branch for pull requests
  baseBranch: "main"

# ============================================================================
# Cluster Configuration
# ============================================================================

cluster:
  # Cluster variant determines the Docker topology for the dev container
  # - standard: Docker-outside-of-Docker (DooD) — for apps that don't run containers
  # - microservices: Docker-in-Docker (DinD) — each worker can run isolated container stacks
  variant: "standard"
"
`;

exports[`Snapshot: Edge Cases > should match snapshot for config.yaml with orchestrator section 1`] = `
"# .generacy/config.yaml
# Generated: 2026-02-24T16:45:30.123Z
# Schema version: 1.0.0
# Generated by: generacy-cloud
#
# This file defines your Generacy project configuration.
# Learn more: https://docs.generacy.ai/config

# ============================================================================
# Project Metadata
# ============================================================================

project:
  # Unique project identifier
  id: "proj_xyz789def"

  # Human-readable project name
  name: "Acme Platform"

# ============================================================================
# Repository Configuration
# ============================================================================

repos:
  # Primary repository (receives onboarding PR)
  primary: "github.com/acme-corp/platform-orchestrator"

  # Development repositories (Generacy can create PRs here)
  dev:
    - "github.com/acme-corp/api-service"
    - "github.com/acme-corp/frontend-app"
    - "github.com/acme-corp/worker-service"

  # Clone-only repositories (read-only access, no PRs created)
  clone:
    - "github.com/acme-corp/shared-lib"
    - "github.com/acme-corp/proto-definitions"

# ============================================================================
# Default Settings
# ============================================================================

defaults:
  # Default AI agent to use for tasks
  agent: "claude-code"

  # Default base branch for pull requests
  baseBranch: "develop"

# ============================================================================
# Orchestrator Configuration (Multi-Repo Projects)
# ============================================================================

orchestrator:
  # How often the orchestrator checks for new tasks (milliseconds)
  pollIntervalMs: 5000

  # Number of parallel worker containers to spawn
  workerCount: 2

# ============================================================================
# Cluster Configuration
# ============================================================================

cluster:
  # Cluster variant determines the Docker topology for the dev container
  # - standard: Docker-outside-of-Docker (DooD) — for apps that don't run containers
  # - microservices: Docker-in-Docker (DinD) — each worker can run isolated container stacks
  variant: "standard"
"
`;

exports[`Snapshot: Edge Cases > should match snapshot for devcontainer.json with docker-compose 1`] = `
"{
  "name": "Acme Platform",
  "dockerComposeFile": "docker-compose.yml",
  "service": "orchestrator",
  "workspaceFolder": "/workspaces/platform-orchestrator",
  "customizations": {
    "vscode": {
      "extensions": [
        "generacy-ai.agency",
        "generacy-ai.generacy"
      ]
    }
  }
}
"
`;

exports[`Snapshot: Edge Cases > should match snapshot for docker-compose.yml cluster services 1`] = `
"# docker-compose.yml
# Generated: 2026-02-24T16:45:30.123Z
# Schema version: 1.0.0
# Generated by: generacy-cloud
#
# Standard cluster (DooD) for Acme Platform
# Orchestrator + Workers + Redis — Docker-outside-of-Docker

services:
  # ==========================================================================
  # Redis - Message queue for orchestrator/worker communication
  # ==========================================================================
  redis:
    image: redis:7-alpine
    command: redis-server --appendonly no --save ""
    healthcheck:
      test: ["CMD", "redis-cli", "ping"]
      interval: 5s
      timeout: 3s
      retries: 5
      start_period: 5s
    volumes:
      - redis-data:/data
    networks:
      - generacy
    restart: unless-stopped

  # ==========================================================================
  # Orchestrator - Main development container
  # ==========================================================================
  orchestrator:
    build:
      context: .
      dockerfile: Dockerfile
    entrypoint: /usr/local/share/scripts/entrypoint-orchestrator.sh
    user: node
    restart: unless-stopped
    stop_grace_period: 30s

    ports:
      - "\${ORCHESTRATOR_PORT:-3100}:\${ORCHESTRATOR_PORT:-3100}"

    env_file:
      - .env

    environment:
      - ROLE=orchestrator
      - REPO_URL=\${REPO_URL}
      - REPO_BRANCH=\${REPO_BRANCH:-main}
      - REDIS_URL=redis://redis:6379
      - REDIS_HOST=redis
      - ORCHESTRATOR_PORT=\${ORCHESTRATOR_PORT:-3100}
      - WORKER_COUNT=\${WORKER_COUNT:-3}
      - PROJECT_ID=proj_xyz789def
      - PROJECT_NAME=Acme Platform
      - GITHUB_TOKEN=\${GITHUB_TOKEN}
      - ANTHROPIC_API_KEY=\${ANTHROPIC_API_KEY}

    volumes:
      - workspace:/workspaces
      - claude-config:/home/node/.claude
      - \${HOME}/.claude.json:/home/node/.claude.json:ro
      - /var/run/docker.sock:/var/run/docker-host.sock

    working_dir: /workspaces

    healthcheck:
      test: ["CMD", "curl", "-f", "http://localhost:\${ORCHESTRATOR_PORT:-3100}/api/health"]
      interval: 30s
      timeout: 10s
      retries: 3
      start_period: 60s

    depends_on:
      redis:
        condition: service_healthy

    extra_hosts:
      - "host.docker.internal:host-gateway"

    networks:
      - generacy

  # ==========================================================================
  # Workers - Parallel task execution containers (scaled)
  # ==========================================================================
  worker:
    build:
      context: .
      dockerfile: Dockerfile
    entrypoint: /usr/local/share/scripts/entrypoint-worker.sh
    user: node
    restart: unless-stopped
    stop_grace_period: 30s

    deploy:
      replicas: \${WORKER_COUNT:-3}

    env_file:
      - .env

    environment:
      - ROLE=worker
      - REPO_URL=\${REPO_URL}
      - REPO_BRANCH=\${REPO_BRANCH:-main}
      - REDIS_URL=redis://redis:6379
      - REDIS_HOST=redis
      - ORCHESTRATOR_URL=http://orchestrator:\${ORCHESTRATOR_PORT:-3100}
      - HEALTH_PORT=9001
      - PROJECT_ID=proj_xyz789def
      - GITHUB_TOKEN=\${GITHUB_TOKEN}
      - ANTHROPIC_API_KEY=\${ANTHROPIC_API_KEY}

    volumes:
      - claude-config:/home/node/.claude
      - \${HOME}/.claude.json:/home/node/.claude.json:ro

    healthcheck:
      test: ["CMD", "curl", "-f", "http://localhost:9001/health"]
      interval: 30s
      timeout: 10s
      retries: 3
      start_period: 90s

    depends_on:
      redis:
        condition: service_healthy
      orchestrator:
        condition: service_healthy

    extra_hosts:
      - "host.docker.internal:host-gateway"

    networks:
      - generacy

# ============================================================================
# Networks
# ============================================================================
networks:
  generacy:
    driver: bridge
    name: proj_xyz789def-cluster-network

# ============================================================================
# Volumes
# ============================================================================
volumes:
  # Persistent workspace for cloned repos
  workspace:
    name: proj_xyz789def-workspace

  # Shared Claude config across orchestrator and workers
  claude-config:
    name: proj_xyz789def-claude-config

  # Redis data persistence
  redis-data:
    name: proj_xyz789def-redis-data
"
`;

exports[`Snapshot: Format Consistency > should maintain consistent JSON formatting across templates 1`] = `
"{
  "name": "E-Commerce API",
  "dockerComposeFile": "docker-compose.yml",
  "service": "orchestrator",
  "workspaceFolder": "/workspaces/ecommerce-api",
  "customizations": {
    "vscode": {
      "extensions": [
        "generacy-ai.agency",
        "generacy-ai.generacy"
      ]
    }
  }
}
"
`;

exports[`Snapshot: Format Consistency > should maintain consistent JSON formatting across templates 2`] = `
"{
  "recommendations": [
    "generacy-ai.agency",
    "generacy-ai.generacy"
  ]
}
"
`;

exports[`Snapshot: Format Consistency > should maintain consistent YAML formatting in config.yaml 1`] = `
"# .generacy/config.yaml
# Generated: 2026-02-24T15:30:00.000Z
# Schema version: 1.0.0
# Generated by: generacy-cli
#
# This file defines your Generacy project configuration.
# Learn more: https://docs.generacy.ai/config

# ============================================================================
# Project Metadata
# ============================================================================

project:
  # Unique project identifier
  id: "proj_abc123xyz"

  # Human-readable project name
  name: "E-Commerce API"

# ============================================================================
# Repository Configuration
# ============================================================================

repos:
  # Primary repository (receives onboarding PR)
  primary: "github.com/acme-corp/ecommerce-api"

# ============================================================================
# Default Settings
# ============================================================================

defaults:
  # Default AI agent to use for tasks
  agent: "claude-code"

  # Default base branch for pull requests
  baseBranch: "main"

# ============================================================================
# Cluster Configuration
# ============================================================================

cluster:
  # Cluster variant determines the Docker topology for the dev container
  # - standard: Docker-outside-of-Docker (DooD) — for apps that don't run containers
  # - microservices: Docker-in-Docker (DinD) — each worker can run isolated container stacks
  variant: "standard"
"
`;

exports[`Snapshot: Format Consistency > should maintain consistent YAML formatting in config.yaml 2`] = `
"# .generacy/config.yaml
# Generated: 2026-02-24T16:45:30.123Z
# Schema version: 1.0.0
# Generated by: generacy-cloud
#
# This file defines your Generacy project configuration.
# Learn more: https://docs.generacy.ai/config

# ============================================================================
# Project Metadata
# ============================================================================

project:
  # Unique project identifier
  id: "proj_xyz789def"

  # Human-readable project name
  name: "Acme Platform"

# ============================================================================
# Repository Configuration
# ============================================================================

repos:
  # Primary repository (receives onboarding PR)
  primary: "github.com/acme-corp/platform-orchestrator"

  # Development repositories (Generacy can create PRs here)
  dev:
    - "github.com/acme-corp/api-service"
    - "github.com/acme-corp/frontend-app"
    - "github.com/acme-corp/worker-service"

  # Clone-only repositories (read-only access, no PRs created)
  clone:
    - "github.com/acme-corp/shared-lib"
    - "github.com/acme-corp/proto-definitions"

# ============================================================================
# Default Settings
# ============================================================================

defaults:
  # Default AI agent to use for tasks
  agent: "claude-code"

  # Default base branch for pull requests
  baseBranch: "develop"

# ============================================================================
# Orchestrator Configuration (Multi-Repo Projects)
# ============================================================================

orchestrator:
  # How often the orchestrator checks for new tasks (milliseconds)
  pollIntervalMs: 5000

  # Number of parallel worker containers to spawn
  workerCount: 2

# ============================================================================
# Cluster Configuration
# ============================================================================

cluster:
  # Cluster variant determines the Docker topology for the dev container
  # - standard: Docker-outside-of-Docker (DooD) — for apps that don't run containers
  # - microservices: Docker-in-Docker (DinD) — each worker can run isolated container stacks
  variant: "standard"
"
`;

exports[`Snapshot: Multi-Repo Templates > should match snapshot for .gitignore (multi-repo) 1`] = `
"# Generacy Configuration Files
# This file is added to your .gitignore by Generacy's onboarding PR

# Environment file containing secrets (API keys, tokens)
generacy.env

# Agent state directory (runtime data, conversation history)
.agent-state/
"
`;

exports[`Snapshot: Multi-Repo Templates > should match snapshot for config.yaml (multi-repo) 1`] = `
"# .generacy/config.yaml
# Generated: 2026-02-24T16:45:30.123Z
# Schema version: 1.0.0
# Generated by: generacy-cloud
#
# This file defines your Generacy project configuration.
# Learn more: https://docs.generacy.ai/config

# ============================================================================
# Project Metadata
# ============================================================================

project:
  # Unique project identifier
  id: "proj_xyz789def"

  # Human-readable project name
  name: "Acme Platform"

# ============================================================================
# Repository Configuration
# ============================================================================

repos:
  # Primary repository (receives onboarding PR)
  primary: "github.com/acme-corp/platform-orchestrator"

  # Development repositories (Generacy can create PRs here)
  dev:
    - "github.com/acme-corp/api-service"
    - "github.com/acme-corp/frontend-app"
    - "github.com/acme-corp/worker-service"

  # Clone-only repositories (read-only access, no PRs created)
  clone:
    - "github.com/acme-corp/shared-lib"
    - "github.com/acme-corp/proto-definitions"

# ============================================================================
# Default Settings
# ============================================================================

defaults:
  # Default AI agent to use for tasks
  agent: "claude-code"

  # Default base branch for pull requests
  baseBranch: "develop"

# ============================================================================
# Orchestrator Configuration (Multi-Repo Projects)
# ============================================================================

orchestrator:
  # How often the orchestrator checks for new tasks (milliseconds)
  pollIntervalMs: 5000

  # Number of parallel worker containers to spawn
  workerCount: 2

# ============================================================================
# Cluster Configuration
# ============================================================================

cluster:
  # Cluster variant determines the Docker topology for the dev container
  # - standard: Docker-outside-of-Docker (DooD) — for apps that don't run containers
  # - microservices: Docker-in-Docker (DinD) — each worker can run isolated container stacks
  variant: "standard"
"
`;

exports[`Snapshot: Multi-Repo Templates > should match snapshot for devcontainer.json (multi-repo) 1`] = `
"{
  "name": "Acme Platform",
  "dockerComposeFile": "docker-compose.yml",
  "service": "orchestrator",
  "workspaceFolder": "/workspaces/platform-orchestrator",
  "customizations": {
    "vscode": {
      "extensions": [
        "generacy-ai.agency",
        "generacy-ai.generacy"
      ]
    }
  }
}
"
`;

exports[`Snapshot: Multi-Repo Templates > should match snapshot for docker-compose.yml (multi-repo) 1`] = `
"# docker-compose.yml
# Generated: 2026-02-24T16:45:30.123Z
# Schema version: 1.0.0
# Generated by: generacy-cloud
#
# Standard cluster (DooD) for Acme Platform
# Orchestrator + Workers + Redis — Docker-outside-of-Docker

services:
  # ==========================================================================
  # Redis - Message queue for orchestrator/worker communication
  # ==========================================================================
  redis:
    image: redis:7-alpine
    command: redis-server --appendonly no --save ""
    healthcheck:
      test: ["CMD", "redis-cli", "ping"]
      interval: 5s
      timeout: 3s
      retries: 5
      start_period: 5s
    volumes:
      - redis-data:/data
    networks:
      - generacy
    restart: unless-stopped

  # ==========================================================================
  # Orchestrator - Main development container
  # ==========================================================================
  orchestrator:
    build:
      context: .
      dockerfile: Dockerfile
    entrypoint: /usr/local/share/scripts/entrypoint-orchestrator.sh
    user: node
    restart: unless-stopped
    stop_grace_period: 30s

    ports:
      - "\${ORCHESTRATOR_PORT:-3100}:\${ORCHESTRATOR_PORT:-3100}"

    env_file:
      - .env

    environment:
      - ROLE=orchestrator
      - REPO_URL=\${REPO_URL}
      - REPO_BRANCH=\${REPO_BRANCH:-main}
      - REDIS_URL=redis://redis:6379
      - REDIS_HOST=redis
      - ORCHESTRATOR_PORT=\${ORCHESTRATOR_PORT:-3100}
      - WORKER_COUNT=\${WORKER_COUNT:-3}
      - PROJECT_ID=proj_xyz789def
      - PROJECT_NAME=Acme Platform
      - GITHUB_TOKEN=\${GITHUB_TOKEN}
      - ANTHROPIC_API_KEY=\${ANTHROPIC_API_KEY}

    volumes:
      - workspace:/workspaces
      - claude-config:/home/node/.claude
      - \${HOME}/.claude.json:/home/node/.claude.json:ro
      - /var/run/docker.sock:/var/run/docker-host.sock

    working_dir: /workspaces

    healthcheck:
      test: ["CMD", "curl", "-f", "http://localhost:\${ORCHESTRATOR_PORT:-3100}/api/health"]
      interval: 30s
      timeout: 10s
      retries: 3
      start_period: 60s

    depends_on:
      redis:
        condition: service_healthy

    extra_hosts:
      - "host.docker.internal:host-gateway"

    networks:
      - generacy

  # ==========================================================================
  # Workers - Parallel task execution containers (scaled)
  # ==========================================================================
  worker:
    build:
      context: .
      dockerfile: Dockerfile
    entrypoint: /usr/local/share/scripts/entrypoint-worker.sh
    user: node
    restart: unless-stopped
    stop_grace_period: 30s

    deploy:
      replicas: \${WORKER_COUNT:-3}

    env_file:
      - .env

    environment:
      - ROLE=worker
      - REPO_URL=\${REPO_URL}
      - REPO_BRANCH=\${REPO_BRANCH:-main}
      - REDIS_URL=redis://redis:6379
      - REDIS_HOST=redis
      - ORCHESTRATOR_URL=http://orchestrator:\${ORCHESTRATOR_PORT:-3100}
      - HEALTH_PORT=9001
      - PROJECT_ID=proj_xyz789def
      - GITHUB_TOKEN=\${GITHUB_TOKEN}
      - ANTHROPIC_API_KEY=\${ANTHROPIC_API_KEY}

    volumes:
      - claude-config:/home/node/.claude
      - \${HOME}/.claude.json:/home/node/.claude.json:ro

    healthcheck:
      test: ["CMD", "curl", "-f", "http://localhost:9001/health"]
      interval: 30s
      timeout: 10s
      retries: 3
      start_period: 90s

    depends_on:
      redis:
        condition: service_healthy
      orchestrator:
        condition: service_healthy

    extra_hosts:
      - "host.docker.internal:host-gateway"

    networks:
      - generacy

# ============================================================================
# Networks
# ============================================================================
networks:
  generacy:
    driver: bridge
    name: proj_xyz789def-cluster-network

# ============================================================================
# Volumes
# ============================================================================
volumes:
  # Persistent workspace for cloned repos
  workspace:
    name: proj_xyz789def-workspace

  # Shared Claude config across orchestrator and workers
  claude-config:
    name: proj_xyz789def-claude-config

  # Redis data persistence
  redis-data:
    name: proj_xyz789def-redis-data
"
`;

exports[`Snapshot: Multi-Repo Templates > should match snapshot for extensions.json (multi-repo) 1`] = `
"{
  "recommendations": [
    "generacy-ai.agency",
    "generacy-ai.generacy"
  ]
}
"
`;

exports[`Snapshot: Multi-Repo Templates > should match snapshot for generacy.env.template (multi-repo) 1`] = `
"# .generacy/generacy.env.template
#
# This is a TEMPLATE file. Copy it to \`generacy.env\` and fill in your actual values.
# The \`generacy.env\` file contains secrets and is automatically ignored by git.
#
# DO NOT commit \`generacy.env\` to version control!
# DO NOT share \`generacy.env\` in public channels!
#
# Generated: 2026-02-24T16:45:30.123Z
# Generated by: generacy-cloud

# ============================================================================
# GitHub Integration
# ============================================================================

# GitHub Personal Access Token (PAT) with repo permissions
# Required for: Creating PRs, reading repositories, managing issues
# Get one at: https://github.com/settings/tokens/new
# Minimum scopes: repo, workflow (for Actions integration)
#
# SECURITY: Store securely, never commit to git, rotate regularly
GITHUB_TOKEN=

# ============================================================================
# AI Agent Configuration
# ============================================================================

# Anthropic API key for Claude Code agent
# Required for: Running AI-powered development tasks
# Get one at: https://console.anthropic.com/settings/keys
#
# SECURITY: Store securely, never commit to git
ANTHROPIC_API_KEY=

# ============================================================================
# Project Configuration
# ============================================================================

# Your Generacy project ID (auto-populated from config.yaml)
# This links your local environment to your Generacy cloud project
PROJECT_ID=proj_xyz789def

# ============================================================================
# Local Development Configuration
# ============================================================================

# Redis URL for task queue (multi-repo orchestration)
# Default points to local Redis instance in dev container
# Override for custom Redis setup or external Redis instance
REDIS_URL=redis://redis:6379

# Logging level for Generacy agent output
# Options: debug, info, warn, error
# Default: info (recommended for development)
LOG_LEVEL=info

# ============================================================================
# Optional: Advanced Configuration
# ============================================================================

# Uncomment and configure these if you need custom behavior:

# Base branch for pull requests (overrides config.yaml default)
# BASE_BRANCH=develop

# API endpoint for Generacy cloud service (for self-hosted deployments)
# GENERACY_API_URL=https://api.generacy.ai

# Custom agent configuration (overrides config.yaml default)
# AGENT=claude-code

# GitHub API base URL (for GitHub Enterprise)
# GITHUB_API_URL=https://api.github.com

# ============================================================================
# Multi-Repo Orchestration (Multi-Repo Projects Only)
# ============================================================================

# Poll interval for orchestrator task queue (milliseconds)
# How often workers check for new tasks
# Default: 5000ms (configured in config.yaml)
# POLL_INTERVAL_MS=5000

# Worker timeout for long-running tasks (seconds)
# Adjust if your tasks typically take longer than 30 minutes
# WORKER_TIMEOUT_SECONDS=1800
"
`;

exports[`Snapshot: Single-Repo Templates > should match snapshot for .gitignore (single-repo) 1`] = `
"# Generacy Configuration Files
# This file is added to your .gitignore by Generacy's onboarding PR

# Environment file containing secrets (API keys, tokens)
generacy.env

# Agent state directory (runtime data, conversation history)
.agent-state/
"
`;

exports[`Snapshot: Single-Repo Templates > should match snapshot for Dockerfile (single-repo) 1`] = `
"# syntax=docker/dockerfile:1

# ── Stage 1: GitHub CLI ──────────────────────────────────────────────
FROM mcr.microsoft.com/devcontainers/typescript-node:22-bookworm AS gh-cli

RUN curl -fsSL https://cli.github.com/packages/githubcli-archive-keyring.gpg \\
      | dd of=/usr/share/keyrings/githubcli-archive-keyring.gpg \\
    && chmod go+r /usr/share/keyrings/githubcli-archive-keyring.gpg \\
    && echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/githubcli-archive-keyring.gpg] https://cli.github.com/packages stable main" \\
      | tee /etc/apt/sources.list.d/github-cli.list > /dev/null \\
    && apt-get update \\
    && apt-get install -y --no-install-recommends gh \\
    && apt-get clean \\
    && rm -rf /var/lib/apt/lists/*

# ── Stage 2: Generacy CLI + Claude Code ──────────────────────────────
FROM gh-cli AS tools

RUN npm install -g @generacy-ai/generacy@latest \\
    && npm install -g @anthropic-ai/claude-code@latest

# ── Final stage ──────────────────────────────────────────────────────
FROM tools

COPY --chmod=755 scripts/ /usr/local/share/scripts/
"
`;

exports[`Snapshot: Single-Repo Templates > should match snapshot for cluster .env.template (single-repo) 1`] = `
"# Environment configuration for E-Commerce API cluster
# Generated: 2026-02-24T15:30:00.000Z
#
# Copy this file to .env and fill in your values:
#   cp .env.template .env

# === Authentication ===
GITHUB_TOKEN=
ANTHROPIC_API_KEY=

# === Repository ===
REPO_URL=acme-corp/ecommerce-api
REPO_BRANCH=main

# === Cluster ===
WORKER_COUNT=3
REDIS_URL=redis://redis:6379
"
`;

exports[`Snapshot: Single-Repo Templates > should match snapshot for config.yaml (single-repo) 1`] = `
"# .generacy/config.yaml
# Generated: 2026-02-24T15:30:00.000Z
# Schema version: 1.0.0
# Generated by: generacy-cli
#
# This file defines your Generacy project configuration.
# Learn more: https://docs.generacy.ai/config

# ============================================================================
# Project Metadata
# ============================================================================

project:
  # Unique project identifier
  id: "proj_abc123xyz"

  # Human-readable project name
  name: "E-Commerce API"

# ============================================================================
# Repository Configuration
# ============================================================================

repos:
  # Primary repository (receives onboarding PR)
  primary: "github.com/acme-corp/ecommerce-api"

# ============================================================================
# Default Settings
# ============================================================================

defaults:
  # Default AI agent to use for tasks
  agent: "claude-code"

  # Default base branch for pull requests
  baseBranch: "main"

# ============================================================================
# Cluster Configuration
# ============================================================================

cluster:
  # Cluster variant determines the Docker topology for the dev container
  # - standard: Docker-outside-of-Docker (DooD) — for apps that don't run containers
  # - microservices: Docker-in-Docker (DinD) — each worker can run isolated container stacks
  variant: "standard"
"
`;

exports[`Snapshot: Single-Repo Templates > should match snapshot for devcontainer.json (single-repo) 1`] = `
"{
  "name": "E-Commerce API",
  "dockerComposeFile": "docker-compose.yml",
  "service": "orchestrator",
  "workspaceFolder": "/workspaces/ecommerce-api",
  "customizations": {
    "vscode": {
      "extensions": [
        "generacy-ai.agency",
        "generacy-ai.generacy"
      ]
    }
  }
}
"
`;

exports[`Snapshot: Single-Repo Templates > should match snapshot for docker-compose.yml (single-repo) 1`] = `
"# docker-compose.yml
# Generated: 2026-02-24T15:30:00.000Z
# Schema version: 1.0.0
# Generated by: generacy-cli
#
# Standard cluster (DooD) for E-Commerce API
# Orchestrator + Workers + Redis — Docker-outside-of-Docker

services:
  # ==========================================================================
  # Redis - Message queue for orchestrator/worker communication
  # ==========================================================================
  redis:
    image: redis:7-alpine
    command: redis-server --appendonly no --save ""
    healthcheck:
      test: ["CMD", "redis-cli", "ping"]
      interval: 5s
      timeout: 3s
      retries: 5
      start_period: 5s
    volumes:
      - redis-data:/data
    networks:
      - generacy
    restart: unless-stopped

  # ==========================================================================
  # Orchestrator - Main development container
  # ==========================================================================
  orchestrator:
    build:
      context: .
      dockerfile: Dockerfile
    entrypoint: /usr/local/share/scripts/entrypoint-orchestrator.sh
    user: node
    restart: unless-stopped
    stop_grace_period: 30s

    ports:
      - "\${ORCHESTRATOR_PORT:-3100}:\${ORCHESTRATOR_PORT:-3100}"

    env_file:
      - .env

    environment:
      - ROLE=orchestrator
      - REPO_URL=\${REPO_URL}
      - REPO_BRANCH=\${REPO_BRANCH:-main}
      - REDIS_URL=redis://redis:6379
      - REDIS_HOST=redis
      - ORCHESTRATOR_PORT=\${ORCHESTRATOR_PORT:-3100}
      - WORKER_COUNT=\${WORKER_COUNT:-3}
      - PROJECT_ID=proj_abc123xyz
      - PROJECT_NAME=E-Commerce API
      - GITHUB_TOKEN=\${GITHUB_TOKEN}
      - ANTHROPIC_API_KEY=\${ANTHROPIC_API_KEY}

    volumes:
      - workspace:/workspaces
      - claude-config:/home/node/.claude
      - \${HOME}/.claude.json:/home/node/.claude.json:ro
      - /var/run/docker.sock:/var/run/docker-host.sock

    working_dir: /workspaces

    healthcheck:
      test: ["CMD", "curl", "-f", "http://localhost:\${ORCHESTRATOR_PORT:-3100}/api/health"]
      interval: 30s
      timeout: 10s
      retries: 3
      start_period: 60s

    depends_on:
      redis:
        condition: service_healthy

    extra_hosts:
      - "host.docker.internal:host-gateway"

    networks:
      - generacy

  # ==========================================================================
  # Workers - Parallel task execution containers (scaled)
  # ==========================================================================
  worker:
    build:
      context: .
      dockerfile: Dockerfile
    entrypoint: /usr/local/share/scripts/entrypoint-worker.sh
    user: node
    restart: unless-stopped
    stop_grace_period: 30s

    deploy:
      replicas: \${WORKER_COUNT:-3}

    env_file:
      - .env

    environment:
      - ROLE=worker
      - REPO_URL=\${REPO_URL}
      - REPO_BRANCH=\${REPO_BRANCH:-main}
      - REDIS_URL=redis://redis:6379
      - REDIS_HOST=redis
      - ORCHESTRATOR_URL=http://orchestrator:\${ORCHESTRATOR_PORT:-3100}
      - HEALTH_PORT=9001
      - PROJECT_ID=proj_abc123xyz
      - GITHUB_TOKEN=\${GITHUB_TOKEN}
      - ANTHROPIC_API_KEY=\${ANTHROPIC_API_KEY}

    volumes:
      - claude-config:/home/node/.claude
      - \${HOME}/.claude.json:/home/node/.claude.json:ro

    healthcheck:
      test: ["CMD", "curl", "-f", "http://localhost:9001/health"]
      interval: 30s
      timeout: 10s
      retries: 3
      start_period: 90s

    depends_on:
      redis:
        condition: service_healthy
      orchestrator:
        condition: service_healthy

    extra_hosts:
      - "host.docker.internal:host-gateway"

    networks:
      - generacy

# ============================================================================
# Networks
# ============================================================================
networks:
  generacy:
    driver: bridge
    name: proj_abc123xyz-cluster-network

# ============================================================================
# Volumes
# ============================================================================
volumes:
  # Persistent workspace for cloned repos
  workspace:
    name: proj_abc123xyz-workspace

  # Shared Claude config across orchestrator and workers
  claude-config:
    name: proj_abc123xyz-claude-config

  # Redis data persistence
  redis-data:
    name: proj_abc123xyz-redis-data
"
`;

exports[`Snapshot: Single-Repo Templates > should match snapshot for extensions.json (single-repo) 1`] = `
"{
  "recommendations": [
    "generacy-ai.agency",
    "generacy-ai.generacy"
  ]
}
"
`;

exports[`Snapshot: Single-Repo Templates > should match snapshot for generacy.env.template (single-repo) 1`] = `
"# .generacy/generacy.env.template
#
# This is a TEMPLATE file. Copy it to \`generacy.env\` and fill in your actual values.
# The \`generacy.env\` file contains secrets and is automatically ignored by git.
#
# DO NOT commit \`generacy.env\` to version control!
# DO NOT share \`generacy.env\` in public channels!
#
# Generated: 2026-02-24T15:30:00.000Z
# Generated by: generacy-cli

# ============================================================================
# GitHub Integration
# ============================================================================

# GitHub Personal Access Token (PAT) with repo permissions
# Required for: Creating PRs, reading repositories, managing issues
# Get one at: https://github.com/settings/tokens/new
# Minimum scopes: repo, workflow (for Actions integration)
#
# SECURITY: Store securely, never commit to git, rotate regularly
GITHUB_TOKEN=

# ============================================================================
# AI Agent Configuration
# ============================================================================

# Anthropic API key for Claude Code agent
# Required for: Running AI-powered development tasks
# Get one at: https://console.anthropic.com/settings/keys
#
# SECURITY: Store securely, never commit to git
ANTHROPIC_API_KEY=

# ============================================================================
# Project Configuration
# ============================================================================

# Your Generacy project ID (auto-populated from config.yaml)
# This links your local environment to your Generacy cloud project
PROJECT_ID=proj_abc123xyz

# ============================================================================
# Local Development Configuration
# ============================================================================

# Redis URL for task queue (multi-repo orchestration)
# Default points to local Redis instance in dev container
# Override for custom Redis setup or external Redis instance
REDIS_URL=redis://redis:6379

# Logging level for Generacy agent output
# Options: debug, info, warn, error
# Default: info (recommended for development)
LOG_LEVEL=info

# ============================================================================
# Optional: Advanced Configuration
# ============================================================================

# Uncomment and configure these if you need custom behavior:

# Base branch for pull requests (overrides config.yaml default)
# BASE_BRANCH=main

# API endpoint for Generacy cloud service (for self-hosted deployments)
# GENERACY_API_URL=https://api.generacy.ai

# Custom agent configuration (overrides config.yaml default)
# AGENT=claude-code

# GitHub API base URL (for GitHub Enterprise)
# GITHUB_API_URL=https://api.github.com
"
`;

exports[`Snapshot: Special Values > should correctly render cluster devcontainer templates 1`] = `
"{
  "name": "E-Commerce API",
  "dockerComposeFile": "docker-compose.yml",
  "service": "orchestrator",
  "workspaceFolder": "/workspaces/ecommerce-api",
  "customizations": {
    "vscode": {
      "extensions": [
        "generacy-ai.agency",
        "generacy-ai.generacy"
      ]
    }
  }
}
"
`;

exports[`Snapshot: Special Values > should correctly render cluster devcontainer templates 2`] = `
"{
  "name": "Acme Platform",
  "dockerComposeFile": "docker-compose.yml",
  "service": "orchestrator",
  "workspaceFolder": "/workspaces/platform-orchestrator",
  "customizations": {
    "vscode": {
      "extensions": [
        "generacy-ai.agency",
        "generacy-ai.generacy"
      ]
    }
  }
}
"
`;

exports[`Snapshot: Special Values > should correctly render cluster docker-compose with runtime env vars 1`] = `
"# docker-compose.yml
# Generated: 2026-02-24T16:45:30.123Z
# Schema version: 1.0.0
# Generated by: generacy-cloud
#
# Standard cluster (DooD) for Acme Platform
# Orchestrator + Workers + Redis — Docker-outside-of-Docker

services:
  # ==========================================================================
  # Redis - Message queue for orchestrator/worker communication
  # ==========================================================================
  redis:
    image: redis:7-alpine
    command: redis-server --appendonly no --save ""
    healthcheck:
      test: ["CMD", "redis-cli", "ping"]
      interval: 5s
      timeout: 3s
      retries: 5
      start_period: 5s
    volumes:
      - redis-data:/data
    networks:
      - generacy
    restart: unless-stopped

  # ==========================================================================
  # Orchestrator - Main development container
  # ==========================================================================
  orchestrator:
    build:
      context: .
      dockerfile: Dockerfile
    entrypoint: /usr/local/share/scripts/entrypoint-orchestrator.sh
    user: node
    restart: unless-stopped
    stop_grace_period: 30s

    ports:
      - "\${ORCHESTRATOR_PORT:-3100}:\${ORCHESTRATOR_PORT:-3100}"

    env_file:
      - .env

    environment:
      - ROLE=orchestrator
      - REPO_URL=\${REPO_URL}
      - REPO_BRANCH=\${REPO_BRANCH:-main}
      - REDIS_URL=redis://redis:6379
      - REDIS_HOST=redis
      - ORCHESTRATOR_PORT=\${ORCHESTRATOR_PORT:-3100}
      - WORKER_COUNT=\${WORKER_COUNT:-3}
      - PROJECT_ID=proj_xyz789def
      - PROJECT_NAME=Acme Platform
      - GITHUB_TOKEN=\${GITHUB_TOKEN}
      - ANTHROPIC_API_KEY=\${ANTHROPIC_API_KEY}

    volumes:
      - workspace:/workspaces
      - claude-config:/home/node/.claude
      - \${HOME}/.claude.json:/home/node/.claude.json:ro
      - /var/run/docker.sock:/var/run/docker-host.sock

    working_dir: /workspaces

    healthcheck:
      test: ["CMD", "curl", "-f", "http://localhost:\${ORCHESTRATOR_PORT:-3100}/api/health"]
      interval: 30s
      timeout: 10s
      retries: 3
      start_period: 60s

    depends_on:
      redis:
        condition: service_healthy

    extra_hosts:
      - "host.docker.internal:host-gateway"

    networks:
      - generacy

  # ==========================================================================
  # Workers - Parallel task execution containers (scaled)
  # ==========================================================================
  worker:
    build:
      context: .
      dockerfile: Dockerfile
    entrypoint: /usr/local/share/scripts/entrypoint-worker.sh
    user: node
    restart: unless-stopped
    stop_grace_period: 30s

    deploy:
      replicas: \${WORKER_COUNT:-3}

    env_file:
      - .env

    environment:
      - ROLE=worker
      - REPO_URL=\${REPO_URL}
      - REPO_BRANCH=\${REPO_BRANCH:-main}
      - REDIS_URL=redis://redis:6379
      - REDIS_HOST=redis
      - ORCHESTRATOR_URL=http://orchestrator:\${ORCHESTRATOR_PORT:-3100}
      - HEALTH_PORT=9001
      - PROJECT_ID=proj_xyz789def
      - GITHUB_TOKEN=\${GITHUB_TOKEN}
      - ANTHROPIC_API_KEY=\${ANTHROPIC_API_KEY}

    volumes:
      - claude-config:/home/node/.claude
      - \${HOME}/.claude.json:/home/node/.claude.json:ro

    healthcheck:
      test: ["CMD", "curl", "-f", "http://localhost:9001/health"]
      interval: 30s
      timeout: 10s
      retries: 3
      start_period: 90s

    depends_on:
      redis:
        condition: service_healthy
      orchestrator:
        condition: service_healthy

    extra_hosts:
      - "host.docker.internal:host-gateway"

    networks:
      - generacy

# ============================================================================
# Networks
# ============================================================================
networks:
  generacy:
    driver: bridge
    name: proj_xyz789def-cluster-network

# ============================================================================
# Volumes
# ============================================================================
volumes:
  # Persistent workspace for cloned repos
  workspace:
    name: proj_xyz789def-workspace

  # Shared Claude config across orchestrator and workers
  claude-config:
    name: proj_xyz789def-claude-config

  # Redis data persistence
  redis-data:
    name: proj_xyz789def-redis-data
"
`;

exports[`Snapshot: Special Values > should correctly render project IDs in config and env template 1`] = `
"# .generacy/config.yaml
# Generated: 2026-02-24T15:30:00.000Z
# Schema version: 1.0.0
# Generated by: generacy-cli
#
# This file defines your Generacy project configuration.
# Learn more: https://docs.generacy.ai/config

# ============================================================================
# Project Metadata
# ============================================================================

project:
  # Unique project identifier
  id: "proj_abc123xyz"

  # Human-readable project name
  name: "E-Commerce API"

# ============================================================================
# Repository Configuration
# ============================================================================

repos:
  # Primary repository (receives onboarding PR)
  primary: "github.com/acme-corp/ecommerce-api"

# ============================================================================
# Default Settings
# ============================================================================

defaults:
  # Default AI agent to use for tasks
  agent: "claude-code"

  # Default base branch for pull requests
  baseBranch: "main"

# ============================================================================
# Cluster Configuration
# ============================================================================

cluster:
  # Cluster variant determines the Docker topology for the dev container
  # - standard: Docker-outside-of-Docker (DooD) — for apps that don't run containers
  # - microservices: Docker-in-Docker (DinD) — each worker can run isolated container stacks
  variant: "standard"
"
`;

exports[`Snapshot: Special Values > should correctly render project IDs in config and env template 2`] = `
"# .generacy/generacy.env.template
#
# This is a TEMPLATE file. Copy it to \`generacy.env\` and fill in your actual values.
# The \`generacy.env\` file contains secrets and is automatically ignored by git.
#
# DO NOT commit \`generacy.env\` to version control!
# DO NOT share \`generacy.env\` in public channels!
#
# Generated: 2026-02-24T15:30:00.000Z
# Generated by: generacy-cli

# ============================================================================
# GitHub Integration
# ============================================================================

# GitHub Personal Access Token (PAT) with repo permissions
# Required for: Creating PRs, reading repositories, managing issues
# Get one at: https://github.com/settings/tokens/new
# Minimum scopes: repo, workflow (for Actions integration)
#
# SECURITY: Store securely, never commit to git, rotate regularly
GITHUB_TOKEN=

# ============================================================================
# AI Agent Configuration
# ============================================================================

# Anthropic API key for Claude Code agent
# Required for: Running AI-powered development tasks
# Get one at: https://console.anthropic.com/settings/keys
#
# SECURITY: Store securely, never commit to git
ANTHROPIC_API_KEY=

# ============================================================================
# Project Configuration
# ============================================================================

# Your Generacy project ID (auto-populated from config.yaml)
# This links your local environment to your Generacy cloud project
PROJECT_ID=proj_abc123xyz

# ============================================================================
# Local Development Configuration
# ============================================================================

# Redis URL for task queue (multi-repo orchestration)
# Default points to local Redis instance in dev container
# Override for custom Redis setup or external Redis instance
REDIS_URL=redis://redis:6379

# Logging level for Generacy agent output
# Options: debug, info, warn, error
# Default: info (recommended for development)
LOG_LEVEL=info

# ============================================================================
# Optional: Advanced Configuration
# ============================================================================

# Uncomment and configure these if you need custom behavior:

# Base branch for pull requests (overrides config.yaml default)
# BASE_BRANCH=main

# API endpoint for Generacy cloud service (for self-hosted deployments)
# GENERACY_API_URL=https://api.generacy.ai

# Custom agent configuration (overrides config.yaml default)
# AGENT=claude-code

# GitHub API base URL (for GitHub Enterprise)
# GITHUB_API_URL=https://api.github.com
"
`;
